--- a/SpaceWay/Views/Flights/Index.cshtml
+++ b/SpaceWay/Views/Flights/Index.cshtml
@@ -16,7 +16,7 @@
             @Html.DisplayNameFor(model => model.Aircraft.AircraftID)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.NumOfPassengers)
+            @Html.DisplayName("Available Seats")
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Origin)
@@ -51,10 +51,10 @@
             @Html.DisplayFor(modelItem => item.NumOfPassengers)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.OriginID)
+            @Html.DisplayFor(modelItem => item.Origin.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.DestinationID)
+            @Html.DisplayFor(modelItem => item.Destination.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Duration)
