--- a/SpaceWay/Views/Home/Index.cshtml
+++ b/SpaceWay/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SpaceWay - plan your trip to space</title>
+    <title>SpaceWay - Plan your trip to space</title>
    
 
     <!-- Bootstrap core CSS -->
