--- a/SpaceWay/Views/Reservations/Index.cshtml
+++ b/SpaceWay/Views/Reservations/Index.cshtml
@@ -18,10 +18,16 @@
             @Html.DisplayNameFor(model => model.OrderDate)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.OutboundID)
+            @Html.DisplayNameFor(model => model.Outbound.Origin)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.InboundID)
+            @Html.DisplayNameFor(model => model.Outbound.Destination)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Inbound.Origin)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Inbound.Destination)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.NumOfTickets)
@@ -41,10 +47,16 @@
             @Html.DisplayFor(modelItem => item.OrderDate)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.OutboundID)
+            @Html.DisplayFor(modelItem => item.Outbound.Origin.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.InboundID)
+            @Html.DisplayFor(modelItem => item.Outbound.Destination.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Inbound.Origin.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Inbound.Destination.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.NumOfTickets)
@@ -53,9 +65,9 @@
             @Html.DisplayFor(modelItem => item.TotalPrice)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ReservationID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ReservationID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ReservationID })
+            @Html.ActionLink("Edit", "Edit", new { id = item.ReservationID }) |
+            @Html.ActionLink("Details", "Details", new { id = item.ReservationID }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.ReservationID })
         </td>
     </tr>
 }
