--- a/SpaceWay/Views/Shared/EditorTemplates/DateTime.cshtml
+++ b/SpaceWay/Views/Shared/EditorTemplates/DateTime.cshtml
@@ -1,11 +1,11 @@
 ﻿@model Nullable<System.DateTime>
 @if (Model.HasValue)
 {
-    @Html.TextBox("", String.Format("{0:MM-dd-yyyy HH:mm}", Model.Value), new { @class = "textbox", @style = "width:400px;" })
+    @Html.TextBox("", String.Format("{0:dd-MM-yyyy HH:mm}", Model.Value), new { @class = "textbox", @style = "width:400px;" })
 }
 else
 {
-    @Html.TextBox("", String.Format("{0:MM-dd-yyyy HH:mm}", DateTime.Now), new { @class = "textbox", @style = "width:400px;" })
+    @Html.TextBox("", String.Format("{0:dd-MM-yyyy HH:mm}", DateTime.Now), new { @class = "textbox", @style = "width:400px;" })
 }
 
 @{
