--- a/SpaceWay/Views/Home/Index.cshtml
+++ b/SpaceWay/Views/Home/Index.cshtml
@@ -101,14 +101,14 @@
     <!-- About Section -->
     <section id="about" class="about-section text-center">
             <div class="container">
-                <div class="row">
+                @*<div class="row">
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
                         <p class="text-white-50">
                             Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
                             <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.
                         </p>
-                    </div>
+                    </div>*@
                 </div>
                 <canvas id = 'myCanvas'></canvas>
                 <video src="~/Content/videos/video.mp4"  alt="" autoplay/>
@@ -173,7 +173,7 @@
     <section></section>
 
     <!-- Signup Section -->
-    <section id="signup" class="signup-section">
+    @*<section id="signup" class="signup-section">
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto text-center">
@@ -189,7 +189,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>*@
 
     <!-- Contact Section -->
     <section class="contact-section bg-black">
