Added Google and Facebook API

--- a/SpaceWay/Views/Home/Index.cshtml
+++ b/SpaceWay/Views/Home/Index.cshtml
@@ -32,8 +32,10 @@
 </head>
 
 
-<body id="page-top " onload="canvasFunc()">
-
+<body id="page-top " @*onload="canvasFunc()"*@ onload="initialize()">
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous"
+            src="https://connect.facebook.net/he_IL/sdk.js#xfbml=1&version=v4.0&appId=355721755360451&autoLogAppEvents=1"></script>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
@@ -96,6 +98,53 @@
             </div>
         </div>
     </header>
+
+
+    <style>
+        /* Always set the map height explicitly to define the size of the div
+        * element that contains the map. */
+        #map {
+            height: 400px;
+            width: 40%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
+    <section class="contact-section bg-black">
+        <div class="container">
+            <div class="row">
+
+                <div id="map"></div>
+
+                <script>
+                    function initMap() {
+                        var myLatLng = { lat: 32.085300, lng: 34.781769 };
+
+                        var map = new google.maps.Map(document.getElementById('map'), {
+                            zoom: 10,
+                            center: myLatLng
+                        });
+
+                        var marker = new google.maps.Marker({
+                            position: myLatLng,
+                            map: map,
+                        });
+
+                        var marker2 = new google.maps.Marker({
+                            position: { lat: 32.321457, lng: 34.853195 },
+                            map: map,
+                        });
+                    }
+
+                </script>
+                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJ09chsMqk_t9GFE7Qua1vzSW2eNlFFkE&callback=initMap"
+                        async defer></script>
+
+            </div>
+        </div>
+    </section>
+
+
 
 
     <!-- About Section -->
@@ -178,7 +227,7 @@
 
 
 
-                    <video width="700" height="400" src="~/Content/Images/video.mp4" title="Explore the amazing space" autoplay controls />
+                    <video width="700" height="400" src="~/Content/Images/video.mp4" title="Explore the amazing space" controls />
                     @*<i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
                         <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
 
@@ -252,6 +301,9 @@
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
         <div class="container">
+        <div class="fb-like" data-href="https://www.facebook.com/Space-Way-102264297798615"
+             data-width="" data-layout="button_count" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+            <br /><br /><br />
             Copyright &copy; Royi, Jonathan, Michal, Uri 2019
         </div>
     </footer>
