--- a/SpaceWay/Views/Home/Nasa.cshtml
+++ b/SpaceWay/Views/Home/Nasa.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "aa";
+    ViewBag.Title = "Nasa";
 }
 
 <h2 class="text-white mb-4">NASA Astronomy Picture Of The Day</h2>
