--- a/SpaceWay/Views/Passengers/Search.cshtml
+++ b/SpaceWay/Views/Passengers/Search.cshtml
@@ -8,17 +8,17 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    <div>
-         
-        <fieldset id="search">
-            <label>Filter by:</label><br />
-            <input type="radio" id="stars" value="stars" name="search" /><label>min stars</label><br />
-            <input type="radio" id="reservations" value="reservations" name="search" /><label>min reservations</label><br />
-            <input type="radio" id="name" value="name" name="search" /><label>name</label><br />
-            <input type="text" id="input" name="input" /><br /><br />
-            <input type="submit" value="Update" class="btn btn-default" /><br />
-        </fieldset>
-    </div>
+    @Html.ActionLink("Display Passenger's Destinations", "JoinPassengersAndDestinations")
+<div>
+    <fieldset id="search">
+        <label>Filter by:</label><br />
+        <input type="radio" id="stars" value="stars" name="search" /><label>min stars</label><br />
+        <input type="radio" id="reservations" value="reservations" name="search" /><label>min reservations</label><br />
+        <input type="radio" id="name" value="name" name="search" /><label>name</label><br />
+        <input type="text" id="input" name="input" /><br /><br />
+        <input type="submit" value="Update" class="btn btn-default" /><br />
+    </fieldset>
+</div>
     }
 
 <table class="table">
