--- a/SpaceWay/Views/Flights/Index.cshtml
+++ b/SpaceWay/Views/Flights/Index.cshtml
@@ -5,7 +5,13 @@
 }
 
 <h2>Index</h2>
-
+@using (Html.BeginForm("Search", "Aircrafts", FormMethod.Post))
+{
+    <input type="text" name="lvl" />
+    <button type="submit">Filter</button>
+}
+@Html.ActionLink("Display Aircraft Capacity Status", "JoinFlightsAndAircrafts")
+@Html.ActionLink("Group Flights By Destination", "GroupFlightsByDestination")
 <p>
     @Html.ActionLink("Create New", "Create")
     @Html.ActionLink("Search for a Flight", "SearchFlight")
@@ -42,41 +48,42 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Aircraft.AircraftID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NumOfPassengers)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Origin.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Destination.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Duration)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Distance)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Departure)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Arrival)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.FlightID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.FlightID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.FlightID })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Aircraft.AircraftID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NumOfPassengers)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Origin.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Destination.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Duration)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Distance)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Departure)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Arrival)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Price)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.FlightID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.FlightID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.FlightID })
+            </td>
+        </tr>
+    }
 
 </table>
