--- a/SpaceWay/Views/Flights/SearchFlight.cshtml
+++ b/SpaceWay/Views/Flights/SearchFlight.cshtml
@@ -2,7 +2,11 @@
 @{
     ViewBag.Title = "SearchFlight";
 }
-
+<script type="text/javascript">
+    $(function () {
+        $('#datetimepicker1').datetimepicker();
+    });
+</script>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -11,7 +15,7 @@
         <h4>Book A Flight</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        
+
         <div class="form-group">
             @Html.LabelFor(model => model.AircraftID, "Aircraft Level", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -39,8 +43,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Departure, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Departure, new { htmlAttributes = new { @class = "form-control" } })
-                @*<input asp-for="Departure" class="form-control" />*@
+
+                @Html.EditorFor(model => model.Departure, new { htmlAttributes = new { @class = "form-control datetimepicker1" } })
                 @Html.ValidationMessageFor(model => model.Departure, "", new { @class = "text-danger" })
             </div>
         </div>
