--- a/SpaceWay/Views/Passengers/Login.cshtml
+++ b/SpaceWay/Views/Passengers/Login.cshtml
@@ -4,19 +4,38 @@
     ViewBag.Title = "Login";
 }
 
-<h2>Login</h2>
-
-
-@using (Html.BeginForm())
-{
+<div class="container">
+    <form id="login-form" class="form" action="Login" method="post">
+        <h3 class="text-center text-info">Login</h3>
         <hr />
-            <label>Username:</label><br />
-            <input class="form-control text-box single-line" data-val="true" data-val-required="Please enter your name." type="text" name="UN" /><br />
-            @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })<br/>
-            <label>Password:</label><br />
-            <input class="form-control text-box single-line" data-val="true" data-val-required="Please enter your name." type="password" name="PW" /><br />
-            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })<br />
+        <div class="row justify-content-md-center">
+            <div class="col-6">
+                <div class="form-group">
+                    <label>Username:</label><br />
+                    <input type="text" name="UN" class="form-control" aria-describedby="Username" placeholder="Enter Username"><br />
+                    @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })<br />
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-md-center">
+            <div class="col-6">
+                <div class="form-group">
+                    <label>Password:</label><br />
+                    @*<input class="form-control text-box single-line" data-val="true" data-val-required="Please enter your name." type="password" name="PW" />*@<br />
+                    <input type="password" name="PW" class="form-control" aria-describedby="Username" placeholder="Enter password"><br />
+                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })<br />
+                </div>
+            </div>
+
+        </div>
+        <div class="row justify-content-md-center">
+            <div class="col-auto">
             <input type="submit" value="Login" class="btn btn-default" />
-   
-}
+                </div>
+        </div>
+
+
+    </form>
+
+    </div>
 
